@@ -1,5 +1,10 @@
 2006-09-12  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/common/tiff.c: added a parargaph of the original
+	copyright notice that was forgotten when originally pasting it.
+
+2006-09-12  Michael Natterer  <mitch@gimp.org>
+
 	* app/tools/gimpmeasuretool.[ch]: implement active_modifier_key()
 	and give immediate feedback when Control (constrain to 15 degrees)
 	is toggled. Did a s/mtool/measure/g.
